crates/stano-di-macros/tests/ui/service_bad_trait_type_token.rs
use stano_di_macros::service;

#[service(dyn +++)]
struct Widget;

fn main() {}
